# ESP32-atlast-forth

./: README.md  sdkconfig  sdkconfig.old
components/aescrypt/: CMakeLists.txt
components/aescrypt/aescrypt/: password.h  sha256.h
components/atlast/: CMakeLists.txt  atlast.c  atlast.h  atldef.h
components/atlast/atl_primitives/: aescrypt_atl.c  aescrypt_atl.h  crypto_atl.c  crypto_atl.h  system_atl.h  u8g2_atl.c
components/atlast/primitives/: system_atl.c
components/atlast_primitives/: CMakeLists.txt  common.h  crypto_atl.c  crypto_atl.h  nvs_atl.c  nvs_atl.h  system_atl.c  twofish2_atl.c  twofish2_atl.h  u8g2_atl.c  u8g2_atl.h
components/crypto/: CMakeLists.txt  base32.h  bip39.c  bip39.h
components/crypto/gui/: mainwindow.cpp
components/twofish2/: CMakeLists.txt  twofish2.c
components/twofish2/twofish2/: aes.h  debug.h  platform.h  table.h
main/: CMakeLists.txt  crypto_atl.c  decoy.h  main.c  u8g2_atl.c  u8g2_atl.h
